[package]
name = "matrixgraph"
version = "0.2.0"
authors = ["Marius Ritter"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/equescalculi/matrixgraph"
documentation = "https://equescalculi.github.io/matrixgraph/matrixgraph/index.html"
description = """
A graph implementation based on dense adjacency matrices
"""
keywords = ["graph"]

[lib]
name = "matrixgraph"
path = "src/lib.rs"
